// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradientButton snapshots default rounded snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6814db",
      "borderColor": "#6F6AC4",
      "borderRadius": 10,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 10,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "textAlign": "center",
        },
        {
          "fontFamily": "YsabeauInfant-SemiBold",
        },
      ]
    }
  >
    Ok
  </Text>
</View>
`;

exports[`GradientButton snapshots fullRounded snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6814db",
      "borderColor": "#6F6AC4",
      "borderRadius": 30,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 10,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "textAlign": "center",
        },
        {
          "fontFamily": "YsabeauInfant-SemiBold",
        },
      ]
    }
  >
    Round
  </Text>
</View>
`;
